; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_degenerate_encode_int.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_degenerate_encode_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_encoder = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_encoder*, i32)* @degenerate_encode_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @degenerate_encode_int(%struct.list_encoder* %0, i32 %1) #0 {
  %3 = alloca %struct.list_encoder*, align 8
  %4 = alloca i32, align 4
  store %struct.list_encoder* %0, %struct.list_encoder** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.list_encoder*, %struct.list_encoder** %3, align 8
  %7 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.list_encoder*, %struct.list_encoder** %3, align 8
  %13 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %13, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
